# taskgraph

./: .gitignore  README.md  index.html  manifest.json  package-lock.json  package.json  service-worker.js  sw.js  tsconfig.json  webpack.config.js
.github/workflows/: make-gh-pages.yml  webpack.yml
css/: default.css
docs/: bundle.js  index.html
docs/css/: default.css
gui/: index.tsx
gui/components/: main_selector.tsx.bak  task_deadline.tsx.bak  task_priority.tsx.bak  user_list.tsx.bak
src/: allow_untyped_libraries.ts  app.tsx  app_state.ts  counter.ts  date_utils.ts  gui.ts  homepage.tsx  index.ts  index.tsx  maybedate.ts  task.ts  taskgraph.ts  taskmanager.ts
src/components/: dependency_list.tsx  errorpage.tsx  floating_button.tsx  homepage.tsx  homepage.tsx.bak  main_selector.tsx  page_layout.tsx  selectorpage.tsx  settings_button.tsx  settingspage.tsx  task_deadline.tsx  task_details.tsx  task_effective_deadline.tsx  task_import.tsx  task_priority.tsx  task_progress.tsx  task_progress.tsx.bak  tasklist.tsx  tasklist.tsx.bak  taskpage.tsx  topcontrols_button.tsx
taskgraph/: Cargo.toml  LICENSE_MIT
taskgraph/src/: lib.rs  utils.rs
taskgraph/src/graph/: mod.rs  tests.rs
taskgraph/src/js_bindings/: mod.rs
taskgraph/src/jstask/: mod.rs
taskgraph/src/mutcell/: mod.rs
taskgraph/src/task/: mod.rs  tests.rs
taskgraph/src/tg/: mod.rs  tests.rs
taskgraph/src/timepoint/: mod.rs
tests/: counter.test.ts  date_utils.test.ts  maybedate.test.ts  task.test.ts  taskgraph.test.ts
ts/: date_utils.ts.bak  index.tsx
