[package]
name = "taskgraph"
version = "0.1.0"
authors = ["Gohér László <goher.laci@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.38"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
smart-default = "0.7.1"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = "s"
